--- a/Week2/package.json
+++ b/Week2/package.json
@@ -4,7 +4,7 @@
   "description": "//Browser Technologies & Feature Detection",
   "main": "index.js",
   "scripts": {
-    "start": "node server"
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
